--- a/spring-petclinic-discovery-server/src/main/resources/application.yml
+++ b/spring-petclinic-discovery-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: discovery-server
   config:
-    import: optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888/}
+    import: optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888/}
 
 # Avoid some debugging logs at startup
 logging:
@@ -18,4 +18,3 @@ spring:
     activate:
       on-profile: docker
     import: configserver:http://config-server:8888
-
