--- a/spring-petclinic-genai-service/src/main/resources/application.yml
+++ b/spring-petclinic-genai-service/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
   profiles:
     active: production
   config:
-    import: optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888/},optional:classpath:/creds.yaml
+    import: optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888/},optional:classpath:/creds.yaml
+
   ai:
     chat:
       client:
@@ -25,9 +26,8 @@ spring:
       api-key: ${OPENAI_API_KEY:demo}
       chat:
         options:
-            temperature: 0.7
-            model: gpt-4o-mini
-
+          temperature: 0.7
+          model: gpt-4o-mini
 
 logging:
   level:
