--- a/spring-petclinic-vets-service/src/main/resources/application.yml
+++ b/spring-petclinic-vets-service/src/main/resources/application.yml
@@ -2,12 +2,11 @@ spring:
   application:
     name: vets-service
   config:
-    import: optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888/}
+    import: optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888/}
   cache:
     cache-names: vets
   profiles:
     active: production
-
 ---
 spring:
   config:
