--- a/spring-petclinic-discovery-server/src/main/resources/application.yml
+++ b/spring-petclinic-discovery-server/src/main/resources/application.yml
@@ -17,4 +17,4 @@ spring:
   config:
     activate:
       on-profile: docker
-    import: optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888/}
+    import: configserver:http://config-server:8888
